Fixed global sidebar overflow

--- a/src/resources/css/source/cp.scss
+++ b/src/resources/css/source/cp.scss
@@ -27,9 +27,9 @@ body {
 .topbar { display: flex; align-items: stretch; }
 
 /* global sidebar */
-#global-sidebar { display: flex; flex-direction: column; position: fixed; top: 0; @include left(0); width: 220px; height: 100vh; background: $headerBgColor; z-index: 100; }
+#global-sidebar { display: flex; flex-direction: column; position: fixed; top: 0; @include left(0); width: 220px; height: 100vh; background: $headerBgColor; z-index: 100; overflow: auto; }
 
-#global-sidebar nav { flex: 1; }
+#global-sidebar nav { flex-grow: 1; }
 
 #global-sidebar #devmode { width: 100%; height: 4px; background: url(../images/dev-mode.svg) repeat-x 15px 0; cursor: help; }
 
